fix: overflow and smaller gif

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,3 @@
 .bg-hero {
-  background-image: url(https://media1.tenor.com/images/95f49feecbd193a2096ba60dd1c2843f/tenor.gif?itemid=19389452);
+  background-image: url(https://media.tenor.com/images/7db8dbc45621d6b2291f60fd48432bc1/tenor.gif);
 }
